buffer: change buffer.data type to char *, instead of void *.

untyped pointers seem to be handled incorrectly by language bindings.
It should fix https://bugzilla.gnome.org/show_bug.cgi?id=706531.