src/arvbuffer.h
@@ -66,7 +66,7 @@ struct _ArvBuffer {
 
 	size_t size;
 	gboolean is_preallocated;
-	void *data;
+	char *data;
 
 	void *user_data;
 	GDestroyNotify user_data_destroy_func;
